// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/parser.test.ts should fix issue#2286 with array example 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "Cat": Object {
        "properties": Object {
          "catds": Object {
            "description": "The breed of the Cat",
            "items": Object {
              "$ref": "#/components/schemas/Catd",
            },
            "type": "array",
          },
          "name": Object {
            "description": "The name of the Cat",
            "example": "Kitty",
            "format": undefined,
            "type": "string",
          },
        },
        "type": "object",
      },
      "Catd": Object {
        "properties": Object {
          "aged": Object {
            "description": "The age of the Cat",
            "example": 1,
            "format": undefined,
            "type": "number",
          },
          "breedd": Object {
            "description": "The breed of the Cat",
            "example": "Maine Coon",
            "format": undefined,
            "type": "string",
          },
          "named": Object {
            "description": "The name of the Cat",
            "example": "Kitty",
            "format": undefined,
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "contact": Object {},
    "description": "",
    "title": "",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/api/update_user": Object {
      "post": Object {
        "description": undefined,
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/Cat",
                },
              },
            },
            "description": "The found record",
          },
        },
        "summary": undefined,
        "tags": Array [
          "api",
        ],
      },
    },
  },
  "servers": Array [],
  "tags": Array [
    Object {
      "description": "api",
      "externalDocs": undefined,
      "name": "api",
    },
  ],
}
`;

exports[`/test/parser.test.ts should test simple case with example 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "Cat": Object {
        "properties": Object {
          "name": Object {
            "description": "The name of the Cat",
            "example": "Kitty",
            "format": undefined,
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "contact": Object {},
    "description": "",
    "title": "",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/api/update_user": Object {
      "post": Object {
        "description": undefined,
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/Cat",
                },
              },
            },
            "description": "The found record",
          },
        },
        "summary": undefined,
        "tags": Array [
          "api",
        ],
      },
    },
  },
  "servers": Array [],
  "tags": Array [
    Object {
      "description": "api",
      "externalDocs": undefined,
      "name": "api",
    },
  ],
}
`;
